@@ -1,3 +1,8 @@
+2005-10-19  Jonathan Pryor  <jonpryor@vt.edu>
+
+	* Mono.Posix.dll.sources: Add new files: Mono.Unix/FileAccessPermissions.cs,
+	  Mono.Unix/FileSpecialAttributes.cs, Mono.Unix/FileTypes.cs.
+
 2005-10-17  Jonathan Pryor  <jonpryor@vt.edu>
 
 	* Mono.Posix_test.dll.sources: Add Mono.Unix/UnixMarshalTest.cs.
